name:                seqid-streams
version:             0.8.0
synopsis:            Sequence ID IO-Streams
description:         Uniquely identify elements in a sequenced stream
License:             BSD3
License-file:        LICENSE
author:              Luke Hoersten
maintainer:          luke@bitnomial.com
copyright:           Bitnomial, Inc. (c) 2016
category:            IO-Streams
build-type:          Simple
cabal-version:       >= 1.10
homepage:            https://github.com/bitnomial/seqid-streams
bug-reports:         https://github.com/bitnomial/seqid-streams/issues

source-repository head
  type: git
  location: git://github.com/bitnomial/seqid-streams.git

library
  exposed-modules: System.IO.Streams.SequenceId

  build-depends: base       >= 4.7 && < 5
               , io-streams >= 1.2 && < 1.6
               , seqid      >= 0.6 && < 0.7

  hs-source-dirs:      src/lib
  default-language:    Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    src/test
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5
    , io-streams >= 1.2 && < 1.6
    , tasty >= 1.2.2
    , tasty-hunit >= 0.10.0.3
    , seqid-streams
